--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "JS/CSS libraries",
   "private": true,
   "dependencies": {
-    "pure": "~0.6.0"
+    "pure": "~0.6.0",
+    "font-awesome": "~4.3.0"
   }
 }
