--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glob-copy": "^0.1.0",
     "gulp-changed": "^1.2.1",
     "gulp-favicons": "^1.0.9",
+    "gulp-filelog": "^0.4.1",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-notify": "^2.2.0",
@@ -29,11 +30,13 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.5",
     "gulp-watch": "^4.2.4",
+    "gulp-zip": "^3.0.2",
     "imagemin-mozjpeg": "^5.1.0",
     "imagemin-pngquant": "^4.1.0",
     "imagemin-svgo": "^4.1.2",
     "imagemin-zopfli": "^4.1.0",
     "imports-loader": "^0.6.4",
+    "moment": "^2.10.3",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.2.0",
     "postcss": "^4.1.11",
